--- a/StarFleetManager/StarFleetManager.Client/Components/Table.razor
+++ b/StarFleetManager/StarFleetManager.Client/Components/Table.razor
@@ -2,6 +2,8 @@
 @using System.ComponentModel.DataAnnotations
 
 <div class="table-responsive">
+    <input id="table-filter" name="table-filter" class="form-control m-1" @bind="_enteredFilter" @oninput="UpdateTableFilter" placeholder="Search your Fleet..." style="width: 20rem;" />
+    <div class="form-text" id="basic-addon4">Filters by Name, Model, Manufacturer or class</div>
     <table class="table table-sm">
         <thead>
             <tr>
@@ -21,16 +23,32 @@
                                         .GetCustomAttribute<DisplayAttribute>()?.Order <= 10))
                 {
                     var display = prop.GetCustomAttribute<DisplayAttribute>();
-                    <th>@(display?.Name ?? prop.Name)</th>
+                    var columnName = prop.GetCustomAttribute<DisplayAttribute>()?.Name;
+                    <th>
+                        <div class="col text-center">
+                            <p class="m-0">@(display?.Name ?? prop.Name)</p>
+                            <button class="btn m-0 p-0" @onclick="() => TableSort(columnName)">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                  <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5m-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5"/>
+                                </svg>
+                            </button>
+                        </div>
+                        
+                        
+                        
+                    </th>
                 }
             </tr>
+            
         </thead>
         <tbody>
-            @foreach (var ship in StarShips)
+            
+
+            @foreach (var ship in _sortedShips.Where(s => string.IsNullOrWhiteSpace(_tableFilter) || s.Name.Contains(_tableFilter, StringComparison.OrdinalIgnoreCase) || s.Model.Contains(_tableFilter, StringComparison.OrdinalIgnoreCase) || s.Manufacturer.Contains(_tableFilter, StringComparison.OrdinalIgnoreCase) || s.StarshipClass.Contains(_tableFilter, StringComparison.OrdinalIgnoreCase)))
             {
                 <tr>
                     <td>
-                        <button class="btn btn-outline-secondary btn-sm" @onclick="() => ToggleAdditionalDetails(ship)">
+                        <button class="btn btn-outline-secondary btn-sm" style="margin: 0 5px 0 0;" @onclick="() => ToggleAdditionalDetails(ship)">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-slash-minus" viewBox="0 0 16 16">
                                 <path d="m1.854 14.854 13-13a.5.5 0 0 0-.708-.708l-13 13a.5.5 0 0 0 .708.708M4 1a.5.5 0 0 1 .5.5v2h2a.5.5 0 0 1 0 1h-2v2a.5.5 0 0 1-1 0v-2h-2a.5.5 0 0 1 0-1h2v-2A.5.5 0 0 1 4 1m5 11a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5A.5.5 0 0 1 9 12" />
                             </svg>
@@ -43,29 +61,35 @@
                             .Where(p => p
                                 .GetCustomAttribute<DisplayAttribute>()?.Order <= 10))
                     {
+                        var headerName = prop.GetCustomAttribute<DisplayAttribute>().Name;
                         var value = prop.GetValue(ship);
-                        if(value is IList<string> list)
-                        {
-                            <td>
-                                <select>
-                                    @foreach(var item in list)
-                                    {
-                                        <option>@item</option>
-                                    }
-                                </select>
-                            </td>
-                        }
-                        else
-                        {
-                            <td>@value</td>
-                        }
+                        
+                            @if(value is IList<string> list)
+                            {
+                                <td>
+                                    <select>
+                                        @foreach(var item in list)
+                                        {
+                                            <option>@item</option>
+                                        }
+                                    </select>
+                                </td>
+                            }
+                            else
+                            {
+                                <td>
+                                    <div class="text-center">@value </div>
+                                </td>
+                            }
+                       
+                        
                     }
                 </tr>
                 if (ship.DisplayAdditionalDetails)
                 {
-                    <tr class="table-secondary" style="display:@(ship.DisplayAdditionalDetails ? "table-row" : "none")">
+                    <tr class="table-light" style="display:@(ship.DisplayAdditionalDetails ? "table-row" : "none"); border-bottom: solid 2px black;">
                         <td colspan="10">
-                            <table class="table table-sm mb-0">
+                            <table class="table table-sm mb-2" style="border-bottom: none!;">
                                 <thead>
                                     <tr>
                                         @foreach (var prop in typeof(StarShipView)
@@ -81,7 +105,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
+                                    <tr style="border-bottom: none!;">
                                         @foreach (var prop in typeof(StarShipView)
                                                                         .GetProperties()
                                                                         .OrderBy(p => p
@@ -101,7 +125,7 @@
                                                     <td>
                                                         <div class="dropdown">
                                                             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                                View Items
+                                                                View
                                                             </button>
                                                             <ul class="dropdown-menu">
                                                                 @foreach (var item in list)
@@ -179,6 +203,21 @@
     [Parameter]
     public EventCallback<StarShipView> DeleteShipCallBack { get; set; }
 
+    private List<StarShipView> _sortedShips = new();
+    private string _enteredFilter = string.Empty;
+    private string _tableFilter = string.Empty;
+    private string _sortColumn = nameof(StarShipView.Name);
+    private bool _sortDecending = true;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        if(_sortedShips.Count == 0)
+        {
+            _sortedShips = StarShips;
+            TableSort("Name");
+        }
+    }
+
     private void ToggleAdditionalDetails(StarShipView ship)
     {
         ship.DisplayAdditionalDetails = !ship.DisplayAdditionalDetails;
@@ -198,4 +237,43 @@
     {
         DeleteShipCallBack.InvokeAsync(ship);
     }
+
+    private void UpdateTableFilter(ChangeEventArgs eventArgs)
+    {
+        _tableFilter = eventArgs.Value?.ToString() ?? string.Empty;
+        //_tableFilter = _enteredFilter;
+    }
+
+    private void TableSort(string columnName)
+    {
+        if (_sortColumn == columnName)
+        {
+            _sortDecending = !_sortDecending;
+        }
+        else
+        {
+            _sortColumn = columnName;
+            _sortDecending = true;
+        }
+
+        if (_sortDecending)
+        {
+            _sortedShips = StarShips.OrderByDescending(s => GetSortValue(s)).ToList();
+        }
+        else
+        {
+            _sortedShips = StarShips.OrderBy(s => GetSortValue(s)).ToList();
+        }
+        StateHasChanged();
+    }
+
+    private object GetSortValue(StarShipView s) =>
+        _sortColumn switch
+        {
+            nameof(StarShipView.Name) => s.Name,
+            nameof(StarShipView.Model) => s.Model,
+            nameof(StarShipView.Manufacturer) => s.Manufacturer,
+            nameof(StarShipView.StarshipClass) => s.StarshipClass,
+            _ => s.Name
+        };
 }
