--- a/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
+++ b/StarFleetManager/StarFleetManager/Components/Pages/Home.razor
@@ -59,14 +59,22 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        var authState = await AuthStateProvider.GetAuthenticationStateAsync();
-        _isLoggedIn = authState.User.Identity?.IsAuthenticated ?? false;
-        @if(_starShips is null || _starShips.Count == 0)
+        try
+        {
+            var authState = await AuthStateProvider.GetAuthenticationStateAsync();
+            _isLoggedIn = authState.User.Identity?.IsAuthenticated ?? false;
+            @if (_starShips is null || _starShips.Count == 0)
+            {
+
+                _starShips = await StarShipService.GetAllAsync();
+                if (!_initialized) _initialized = true;
+            }
+        }
+        catch(Exception ex)
         {
             
-            _starShips = await StarShipService.GetAllAsync();
-            if (!_initialized) _initialized = true;
         }
+        
     }
 
     private async Task FillFleet()
